--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EventFlow - Modern Event Management Platform</title>
-    <meta name="description" content="EventFlow is a comprehensive event management platform for organisers. Plan, execute, and manage events with ease - from ticketing to check-ins." />
-    <meta name="author" content="EventFlow" />
-    <meta name="keywords" content="event management, event planning, ticketing, attendee management, check-in, conferences, workshops" />
-    <link rel="canonical" href="https://eventflow.app" />
 
-    <meta property="og:title" content="EventFlow - Modern Event Management Platform" />
-    <meta property="og:description" content="Plan, execute, and manage events with ease. Comprehensive tools for ticketing, attendee management, and real-time check-ins." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:url" content="https://eventflow.app" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Eventbrite - Discover Great Events</title>
+  <meta name="description"
+    content="Eventbrite brings people together through live experiences. Discover events that match your passions, or create your own with online ticketing tools." />
+  <meta name="author" content="Eventbrite Clone" />
+  <meta name="keywords" content="events, tickets, eventbrite, discover, host" />
+  <link rel="canonical" href="https://eventbrite.com" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@EventFlow" />
-    <meta name="twitter:title" content="EventFlow - Modern Event Management Platform" />
-    <meta name="twitter:description" content="Plan, execute, and manage events with ease. Comprehensive tools for ticketing, attendee management, and real-time check-ins." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:title" content="Eventbrite - Discover Great Events" />
+  <meta property="og:description"
+    content="Eventbrite brings people together through live experiences. Discover events that match your passions, or create your own with online ticketing tools." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://eventbrite.com" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  </head>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eventbrite" />
+  <meta name="twitter:title" content="Eventbrite - Discover Great Events" />
+  <meta name="twitter:description"
+    content="Eventbrite brings people together through live experiences. Discover events that match your passions, or create your own with online ticketing tools." />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
